CD/webdemo-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-echoserver
  namespace: blue
  labels:
    run: svc-echoserver
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    run: echoserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: blue
spec:
  selector:
    matchLabels:
      run: echoserver
      app: bookstore
      role: api
  replicas: 3
  template:
    metadata:
      labels:
        run: echoserver
        app: bookstore
        role: api
    spec:
      containers:
      - name: echoserver
        image: inanimate/echo-server
        ports:
        - containerPort: 8080
