CD/webdemo-red.yml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: red
  labels:
    run: svc-echoserver
spec:
  type: ClusterIP
  ##type: NodePort
  ##type: LoadBalancer
  ##externalTrafficPolicy: Cluster
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    run: echoserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: red
spec:
  selector:
    matchLabels:
      run: echoserver
  replicas: 3
  template:
    metadata:
      labels:
        run: echoserver
    spec:
      containers:
      - name: echoserver
        image: inanimate/echo-server
        ports:
        - containerPort: 8080
