CD/all1-allow-in-blue.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dns-allow-in-blue
  namespace: blue
spec:
  podSelector: {}
  egress:
    - to:
      - ipBlock:
          cidr: 1.1.1.1/32
      - ipBlock:
          cidr: 8.8.8.8/32
