CD/allone-allow-out-blue.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allone-allow-out-blue
  namespace: blue
spec:
  podSelector: {}
  egress:
    - to:
      - ipBlock:
          cidr: 1.1.1.1/32
      - ipBlock:
          cidr: 8.8.8.8/32
