CD/allow-from-debug.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-debug
  namespace: blue
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          ##matchLabels:
            ##kubernetes.io/metadata.name: default
        podSelector:
          matchLabels:
            type: debug
