CD/api-allow-blue.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
  namespace: blue
spec:
  podSelector:
    matchLabels:
      app: bookstore
      role: api
  ingress:
  - from:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            app: bookstore
