CD/cloisonne-blue.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cloisonne-blue
  namespace: blue
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
       matchLabels:
         kubernetes.io/metadata.name: blue
