CD/default-deny-all-blue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-denyall-ingress-blue
  namespace: blue
spec:
  podSelector: {}
  policyTypes:
  - Ingress
