CD/http-allow-dns-in-blue.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dns-allow-in-blue
  namespace: blue
spec:
  podSelector:
  ingress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
