CD/http-allow-from-all-default.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: echo-server
  ingress:
  - ports:
    - port: 80
    from:
    - {}
