CD/http-allow-from-all-red.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-allow-from-all-red
  namespace: red
spec:
  podSelector:
    matchLabels:
      run: echo-server
  ingress:
  - {}
